// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods submitRequest graphql failure 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Submission error
    </title>
  </SideEffect(Head)>
  <FormDialog>
    <SubmitPane
      error={[Error: Error submitting]}
      state="error"
    />
  </FormDialog>
</div>
`;

exports[`methods submitRequest success 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Submitting…
    </title>
  </SideEffect(Head)>
  <FormDialog>
    <SubmitPane
      state="submitting"
    />
  </FormDialog>
</div>
`;

exports[`methods submitRequest success 2`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Success: Case new-request
    </title>
  </SideEffect(Head)>
  <FormDialog>
    <SubmitPane
      state="success"
      submittedRequest={
        Object {
          "id": "new-request",
          "requestedAt": 1488464201,
          "status": "open",
        }
      }
    />
  </FormDialog>
</div>
`;

exports[`rendering contact 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1fz8tjx": "",
      }
    }
  >
    <div>
      <div>
        <h2
          className={
            Object {
              "data-css-16pm9zd": "",
            }
          }
        >
          CONTACT FORM
        </h2>
        <div
          className={
            Object {
              "data-css-1w0rge6": "",
            }
          }
        >
          (will not be shared with public; leave blank to submit anonymously)
        </div>
        <label
          className={
            Object {
              "data-css-12a7iqv": "",
            }
          }
        >
          <span>
            First Name 
            (required)
          </span>
          <input
            className={
              Object {
                "data-css-b35x0h": "",
              }
            }
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            value=""
          />
        </label>
        <label
          className={
            Object {
              "data-css-12a7iqv": "",
            }
          }
        >
          <span>
            Last Name 
            (required)
          </span>
          <input
            className={
              Object {
                "data-css-b35x0h": "",
              }
            }
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            value=""
          />
        </label>
        <label
          className={
            Object {
              "data-css-12a7iqv": "",
            }
          }
        >
          <span>
            Email
          </span>
          <input
            className={
              Object {
                "data-css-b35x0h": "",
              }
            }
            name="email"
            onChange={[Function]}
            placeholder="Email"
            type="email"
            value=""
          />
        </label>
        <label
          className={
            Object {
              "data-css-12a7iqv": "",
            }
          }
        >
          <span>
            Phone
          </span>
          <input
            className={
              Object {
                "data-css-b35x0h": "",
              }
            }
            name="phone"
            onChange={[Function]}
            placeholder="Phone"
            type="tel"
            value=""
          />
        </label>
      </div>
      <button
        disabled={true}
        onClick={[Function]}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`rendering location 1`] = `
<div
  className={
    Object {
      "data-css-15pzzh6": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1fz8tjx": "",
      }
    }
  >
    <div
      className={
        Object {
          "data-css-84wcpg": "",
        }
      }
    >
      <h3
        className={
          Object {
            "data-css-4ptjc6": "",
          }
        }
      >
        Where is the problem happening?
      </h3>
      
      <form
        className={
          Object {
            "data-css-19lcmdn": "",
          }
        }
        onSubmit={[Function]}
      >
        <input
          className={
            Object {
              "data-css-1rqhb6b": "",
            }
          }
          onInput={[Function]}
          placeholder="Search for an address…"
          type="text"
          value=""
        />
        <button
          disabled={true}
          type="submit"
        >
          Search
        </button>
      </form>
      <div
        className={
          Object {
            "data-css-19e7ai6": "",
          }
        }
      >
        <button
          className={
            Object {
              "data-css-1wppbi7": "",
            }
          }
          disabled={true}
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering questions 1`] = `
<div
  className={
    Object {
      "data-css-1ldikjo": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1fz8tjx": "",
      }
    }
  >
    <div>
      <div
        className="sh sh--y"
      >
        <h2
          className="sh-title"
        >
          Cosmic Incursion
        </h2>
      </div>
      <div
        className={
          Object {
            "data-css-dgukzt": "",
          }
        }
      >
        
      </div>
      <label>
        <p>
          Please provide any other relevant information:
           
        </p>
        <textarea
          className={
            Object {
              "data-css-1bm19ha": "",
            }
          }
          name="ST-CMTS"
          onChange={[Function]}
          value=""
        />
      </label>
      <label>
        <p>
          **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
           
        </p>
        <input
          className={
            Object {
              "data-css-rqg0fb": "",
            }
          }
          name="INFO-CSIRMV1"
          onChange={[Function]}
          type="text"
          value=""
        />
      </label>
      <div>
        <p>
          How many dimensions have been breached?
           
          (required)
        </p>
        <label
          className="ra"
        >
          <input
            checked={false}
            className="ra-f"
            name="SR-CSIRMV1"
            onChange={[Function]}
            type="radio"
            value="One"
          />
          <span
            className="ra-l"
          >
            One
          </span>
        </label>
        <label
          className="ra"
        >
          <input
            checked={false}
            className="ra-f"
            name="SR-CSIRMV1"
            onChange={[Function]}
            type="radio"
            value="Two"
          />
          <span
            className="ra-l"
          >
            Two
          </span>
        </label>
        <label
          className="ra"
        >
          <input
            checked={false}
            className="ra-f"
            name="SR-CSIRMV1"
            onChange={[Function]}
            type="radio"
            value="Three"
          />
          <span
            className="ra-l"
          >
            Three
          </span>
        </label>
        <label
          className="ra"
        >
          <input
            checked={false}
            className="ra-f"
            name="SR-CSIRMV1"
            onChange={[Function]}
            type="radio"
            value="More than Three"
          />
          <span
            className="ra-l"
          >
            More than Three
          </span>
        </label>
      </div>
      <div>
        <button
          disabled={true}
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;
